--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+20110729
+- by Nandaka
+  - add auto save cookie from login
+  - refactor parsing logic to the PixivModel
+
 20110708
 - by Nandaka
   - Add cookie option for log in as requested by Demonoid.
