--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+201111xx
+- by Nandaka
+  - add filename format in the console title.
+  - update bookmarks processing to include hidden bookmarks.
+
 20111028
 - by Nandaka
   - Fix artist name parsing.
