--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+201111xx
+- by Nandaka
+  - Fix list.txt parsing the user target dir; strip() the line before split().
+
 20111111
 - by Nandaka
   - Add filename format in the console title.
