--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 201111xx
 - by Nandaka
   - Fix list.txt parsing the user target dir; strip() the line before split().
+  - Fix bookmark and DB exporting for member_id; remove space if no path defined.
 
 20111111
 - by Nandaka
