--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
   - Fix list.txt parsing the user target dir; strip() the line before split().
   - Fix bookmark and DB exporting for member_id; remove space if no path defined.
   - Change default value for rootdirectory to "." (same folder with apps).
+  - Add unseen error message for member_id page parsing.
 
 20111111
 - by Nandaka
