--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,12 @@
-201111xx
+20111119
 - by Nandaka
   - Fix list.txt parsing the user target dir; strip() the line before split().
   - Fix bookmark and DB exporting for member_id; remove space if no path defined.
   - Change default value for rootdirectory to "." (same folder with apps).
-  - Add unseen error message for member_id page parsing.
+  - Add new error message for member_id page parsing.
   - Update Console Title when downloading.
+  - Delete inactive member_id from DB.
+  - Update download by image bookmark to enter the member_id.
 
 20111111
 - by Nandaka
