Update download by online user bookmark: add option only to process private/hidden user bookmark.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 201112xx
 - by Nandaka
   - Fix PixivHelper, add import sys statement as reported by MikoMiko.
+  - Update Download/Export from online user bookmark: only process the private/hidden user bookmark.
 
 20111126
 - by Nandaka
