--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 201112xx
 - by Nandaka
+  - replace os.system() to subprocess.call()
+
+20111202
+- by Nandaka
   - Fix PixivHelper, add import sys statement as reported by MikoMiko.
   - Update Download/Export from online user bookmark: only process the private/hidden user bookmark.
   - Update error logging message.
