Add last page detection for Download by Tags

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - by Nandaka
   - Add BOM handler for list.txt
   - Add End Page for download new illust from bookmark as requested by Golden Wolf
+  - Add Last Page Detection for download by tags as reported by tribe
 
 20111212
 - by Nandaka
