--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,10 @@
-201201xx
+20120114
 - by Nandaka
-  - Add BOM handler for list.txt
-  - Add End Page for download new illust from bookmark as requested by Golden Wolf
-  - Add Last Page Detection for download by tags as reported by tribe
-  - Add use wilcard option for download by tags and download by Title/Caption as requested by tribe
+  - Add BOM handler for list.txt.
+  - Add End Page for download new illust from bookmark as requested by Golden Wolf.
+  - Add Last Page Detection for download by tags as reported by tribe.
+  - Add use wilcard option for download by tags and download by Title/Caption as requested by tribe.
+  - Refactor Start/End page number UI.
 
 20111212
 - by Nandaka
