fix parseTags method, add start/end date for download by tags.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 201202xx
 - by Nandaka
   - Fix no limit for end page as reported by Troid.
-
+  - Fix parseTags method as reported by gsilver.
+  - Add start/end date for download by tag as requested by UnemployedIncubator.
 
 20120114
 - by Nandaka
