Update changelog and readme

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
   - Source code formatting.
   - Fix sanitizeFilename method for non-windows os as reported by Joe.
   - Fix Mechanize 'req._tunnel_host = None' if no proxy used as reported by Joe.
-  - Add new filenameFormat metatag as requested by Xemnarth.
+  - Add new filenameFormat metatag as requested by Yanoflies.
     -> %works_date%   ==> works date, complete with time.
     -> %works_date_only% ==> only the works date.
     -> %works_res%    ==> image resolution, will be containing the page count if manga.
