--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - by Nandaka
   - Fix list.txt parsing if have drive letter in the path as reported by Dwayne.
   - Fix Download by Tags console command, add wildcard option [y/n] as reported by Dwayne.
+  - Fix Download by Title/Caption as reported by tribe.
 
 20120224
 - by Nandaka
