Fix start/end page parameter parsing as reported by repu.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 20120309
 - by Nandaka
+  - Fix start/end page parameter parsing as reported by repu.
+
+20120309
+- by Nandaka
   - Fix list.txt parsing if have drive letter in the path as reported by Dwayne.
   - Fix Download by Tags console command, add wildcard option [y/n] as reported by Dwayne.
   - Fix Download by Title/Caption as reported by tribe.
