--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
-20120309
+201203xx
 - by Nandaka
   - Fix start/end page parameter parsing as reported by repu.
+  - Add option to use the query tags as the save folder (appended to root directory) as requested by Ruca.
 
 20120309
 - by Nandaka
