Fix unicode handling for tags

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - by Nandaka
   - Fix start/end page parameter parsing as reported by repu.
   - Add option to use the query tags as the save folder (appended to root directory) as requested by Ruca.
+  - Update tags list parser to handle text files with BOM.
 
 20120309
 - by Nandaka
