--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,13 @@
   - Fix start/end page parameter parsing as reported by repu.
   - Add option to use the query tags as the save folder (appended to root directory) as requested by Ruca.
   - Update tags list parser to handle text files with BOM.
+  - Add blacklist and suppress tags list.
+    - useblacklisttags = True/False
+      Skip image if containing blacklisted tags. 
+      The list is taken from blacklist_tags.txt, each tags is separated by new line.
+    - usesuppresstags = True/False
+      Remove the suppressed tags from %tags% meta for filename.
+      The list is taken from suppress_tags.txt, each tags is separated by new line.
 
 20120309
 - by Nandaka
