--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,7 @@
       The list is taken from suppress_tags.txt, each tags is separated by new line.
   - Add tagsLimit to be used for %tags% meta in the filename as requested by Anonymous User.
     - Use -1 to use all tags.
+  - Fix useTagsAsDir (20120317b)
 
 20120309
 - by Nandaka
