--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+201205xx
+- by Nandaka
+  - Add downloaded filesize check.
+
 20120505
 - by Nandaka
   - Add SSL Login support (set useSSl in Authentication to True).
