Parse image Views/Ratings/Totals information.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 201205xx
 - by Nandaka
   - Add downloaded filesize check.
+  - Parse image Views/Ratings/Totals information.
 
 20120505
 - by Nandaka
