Fix config.ini path resolution to the actual path where the script reside, not the working dir. This also affected the db and the log file, the list.txt still use the current working directory if in config.ini is still using relative path (./).

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20120727
+- Fix config.ini path resolution to the actual path where the script reside, not the working dir.
+
 20120724
 - Update makeFilename
   - clean up double space
