Update page parser and unittest

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
-20120727
+20120803
 - Fix config.ini path resolution to the actual path where the script reside, not the working dir.
+- Update page parser
+- Update unittest
 
 20120724
 - Update makeFilename
